PaC/CEL/gatekeeper-Rego,CEL/2-1.cel-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snohostnetworkcel
spec:
  crd:
    spec:
      names:
        kind: K8sNoHostNetworkCEL
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: K8sNativeValidation
          source:
            validations:
            - expression: "!has(object.spec.hostNetwork) || object.spec.hostNetwork != true"
              message: "HostNetwork is not allowed for the pod"
