PaC/CEL/gatekeeper-Rego,CEL/2-2.cel-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoHostNetworkCEL
metadata:
  name: no-hostnetwork-cel
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
