PaC/CEL/gatekeeper-Rego,CEL/cel-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyNoHostNetworkCEL
metadata:
  name: deny-hostnetwork-cel
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
