PaC/CEL/gatekeeper-Rego,CEL/rego-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenynohostnetworkrego
spec:
  crd:
    spec:
      names:
        kind: K8sDenyNoHostNetworkRego
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenynohostnetworkrego

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          input.review.object.spec.hostNetwork == true
          msg := "HostNetwork usage is not allowed for pods"
        }
